# infobel-getdata-api-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
infobel_api/: __init__.py  _base_service.py  _config_writers.py  _http.py  auth.py  cli.py  client.py  config.py  exceptions.py  flatten.py  mcp_server.py
infobel_api/models/: __init__.py  auth.py  common.py  search.py
infobel_api/services/: __init__.py  categories.py  countries.py  locations.py  record.py  search.py  test.py  utils.py
tests/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_exceptions.py  test_http.py  test_mcp_field_selection.py  test_models.py  test_services.py
