[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infobel-api"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = ["requests>=2.28", "pydantic>=2.0", "pydantic-settings>=2.0", "mcp[cli]>=1.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "responses"]
