[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "infobel-api-mcp"
version = "1.0.5"
description = "Python client and MCP server for the Infobel GetData API."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "TechInfobel" }]
requires-python = ">=3.10"
keywords = ["infobel", "mcp", "api-client", "business-search", "claude", "cli", "setup", "gemini", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp[cli]>=1.0",
    "tomli-w>=1.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/techinfobel/infobel-getdata-api-mcp"
Repository = "https://github.com/techinfobel/infobel-getdata-api-mcp"
Issues = "https://github.com/techinfobel/infobel-getdata-api-mcp/issues"
Documentation = "https://github.com/techinfobel/infobel-getdata-api-mcp#readme"

[project.scripts]
infobel-mcp = "infobel_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["infobel_api"]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hatchling>=1.27",
    "pytest",
    "pytest-cov",
    "responses",
    "twine>=6.0",
]
